# apcomp215-rescam

./: .gitignore  DOCKER_COMPOSE_GUIDE.md  PUBSUB_WEBHOOK_SETUP.md  README.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  docker-compose.yml  protobuf_ms.proto  setup-pubsub-push.sh  test_firestore_event.sh
reports/: Journal.md
src/api/: Dockerfile  package.json
src/api/routes/: emails.js  pubsub.js
src/api/services/: gcsService.js
src/app/: index.html  nginx.conf  vite.config.js
src/app/src/: App.jsx
src/app/src/components/: Dashboard.jsx  EmailItem.jsx  EmailList.jsx  Inbox.jsx  Login.jsx
src/app/src/styles/: global.css
src/datapipeline/: .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  TESTING_GUIDE.md  VERTEX_AI_SETUP.md  dataloader.py  docker-shell.sh  main.py  preprocess_clean.py  pyproject.toml  query_vertex_ai.py  upload_fake_data.py
src/models/: Dockerfile  docker-shell.sh  example_last_email.txt  firestore_event_handler.py  gmail_processor.py  model_rag.py  pubsub_trigger.py  pyproject.toml  regression_example.py  test_incoming_email.sh  train_model.py  update_gcs.py
src/models/protobuf_schema/: firestore_message_pb2.py
src/models/protobuf_schema/google/type/: latlng_pb2.py
tests/: README.md
tests/models/: README.md  example_firestore_event_message.b64  test_firestore_event.sh
