[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "google-generativeai>=0.8.5",
    "google-cloud-pubsub>=2.20.0",
    "google-auth>=2.25.0",
    "google-api-python-client>=2.100.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "sentence-transformers>=5.1.1",
    "vertexai>=1.71.1",
]
